--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <figure class="highcharts-figure">
   <div id="container"></div>
+  <div id="form-container">
   <form>
     <label>Value: </label>
     <input id='requestNumbers' name="Value" type="number" min="0" step="1"/>
@@ -35,6 +37,7 @@
     <br/>
     <input type="submit" id='submit' value="Submit">
   </form>
+</div>
 </figure>
 
 <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -42,6 +45,7 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+<script src="./scripts/store.js"></script>
 <script src="./scripts/index.js"></script>
 </body>
 
